--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -33,6 +33,8 @@
     <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/img/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/img/mstile-310x310.png" />
     <link rel="preload" href="%PUBLIC_URL%/img/logo-vertical.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/img/ro.svg" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/img/en.svg" as="image">
 
     <script>
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
